== 1.1.1 2011-07-12

* Minor changes
 * Fixed scoped DOM ids in saved template.

== 1.1.0 2011-07-11

* Major changes
 * Fixed 'cached_pages' indexing.
 * Added support for haproxy and init.d scripts in cap deploy rules.
 * Added support for upvalues (variables defined in siblings above).
 * Added mode and format filters to Acl rules.
 * Added Selenium testing
   ** > rake zena:test_server (cleans zafu, setup fixtures, start server)
   ** > rake test:acceptance
 * Using up instead of first element in list_context as 'this' (use "first" to obtain old behavior)
 * Enabled specializable static skins (with proper class loading) to ease code reuse and enable filesystem based development.
 * Created "Single" brick to ease deployment on shared hosting.

* Minor changes
 * Fixed 'prefix' option on [url].
 * Console methods now accept SQLiss.
 * Admin interface top link moves to page.
 * Fixed a bug in date parsing: links should use contextual timezone.
 * Added 'versions' safe method to return list of versions for a node.
 * Fixed bricks requirements when database.yml is not present.
 * Fixed [input type='id'] when used on new records.
 * Fixed bugs in [edit] forms and Ajax [add].
 * Fixed bugs in [edit] when used with a table.
 * Fixed initial migration bug when using MySQL.
 * Fixed loading on shared hosts without rmagick (or with an old version).
 * Fixed Role icon (sometimes there is a legacy 'icon' column).

== 1.0.0 2011-06-15

* Major changes
 * [link] and other url related zafu tags ([form]) *do not typecast to String* by default:
   you need to use <r:link foo='%{baz}'/> for literal values.
 * Created 'uv' brick to support ultraviolet syntax highlighting.
 * Created 'acl' brick to support Access Control Lists.
 * On Skin importation, imports roles from "_roles.yml" file.

* Minor changes
 * Fixed login redirect to not leave ssh.
 * Fixed 'root' scoping and custom urls with mode ('_' in url).
 * Fixed 'host' option for zazen, link and img tags.