@@ -32,6 +32,14 @@ include_part_replace_method:
   src: "include_part: <r:include template='/meta/id/name' part='bob' do='title'/>"
   tem: "include_part: <b><%= @node.prop['title'] %></b>"
 
+id_do:
+  src: "<h1 id='logo' do='title'/>"
+  res: "<h1 id='logo'>status title</h1>"
+
+id_do_with:
+  src: "include_part: <r:include template='/meta/id/do'><r:with part='logo'>foo</r:with></r:include>"
+  res: "include_part: <b>Bob</b>"
+
 # this test is a dummy used by include_context
 context_dummy:
   src: "CD: <r:pages in='site' where='title like \"s%\"' name='pages'><r:each join=', ' do='title'/></r:pages>"
